--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <h1 class="country-text">JAPAN</h1>
 
-        <img src="static/home_page_QR_link.png" class="qrcode" onclick="this.classList.toggle('enlarged')">
+        <img src="static/qr_code.png" class="qrcode" onclick="this.classList.toggle('enlarged')">
 
       </div>
     </section>
