--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         <video
           id="bg-video"
           class="sec1-video"
-          autoplay
           muted
           loop
           playsinline
-          preload="auto"
+          preload="metadata"
           poster="static/poster/japan.jpg"
         >
           <source src="https://github.com/ciri10k/HP_new1/releases/download/bg-video/japan.mp4" type="video/mp4">
@@ -134,6 +133,7 @@
         video.pause();
         source.src = data.video;
         video.load();
+        video.preload() = "metadata";
 
         video.muted = true;
         video.playsInline = true;
